Bug numbers refer to the BTS at http://pari.math.u-bordeaux.fr/Bugs/

Done for version 2.12.0 (released ??/??/20??):
  Fixed
     1- memory leaks due to the use of varhigher/varlower
     2- memory leak on error in plots
     3- memory leak on error in newtoncharpoly
     4- heap-buffer-overflow in init_prefix [readline]
     5- mfsplit(mf,,flag) could return uninitialized objects => SEGV
     6- mfeisenstein(k,,chi) was treated as E(k,chi) instead of E(k,1,chi)
     7- poldegree(y/x) -> 0 [ instead of -1 ]
     8- sumeulerrat(y/x^2,1) -> junk
HC   9- incgam(-1000.4,2) -> SEGV
    10- mfatkininit(mfinit([366,2]),2) -> precision error
    11- forprimestep: wrong when wrapping word boundary (2^32 or 64) [#2071]
    12- mfbracket: [f,g]_m was multiplied by (-1)^m
    13- wrong results in mfatkininit / mfatkineigenvalues due to insufficient
        precision [#2073/#2074]

  Changed
     1- [libpari] gp_filter return value is now allocated on the stack
        [was undocumented, malloc'ed and resulted in memory leaks]
     2- improved n!, factorial(n) and lngamma(n) for integral n
     3- improved bernvec: no longer Obsolete
     4- [libpari] mpbern is now obsolete: use constbern
     5- rewrote the Bernoulli number cache (using zeta(2n) = * B_{2n})
        and power recycling for zeta(2n) + additive Clausen von Staudt):
        orders of magnitude faster and always store Bernoulli in rational form
BA   6- [libpari] ZpX_ZpXQ_liftroot_ea: change interface for 'early'
     7- bnf.fu: return '0' if bnf does not contain the fundamental units (was an
        error)

  Added
     1- [libpari] nonsquare_Fl
     2- [libpari] set_avma
BA   3- [libpari] FpXC_FpXQ_eval
     4- [libpari] mulu_interval_step
     5- new file src/basemath/bern.c
     6- [libpari] divisorsu_moebius
     7- [libpari] ZXQ_powu

  Removed
     1- member functions .futu and .tufu [deprecated since 2.2]