@@ -2008,9 +2008,10 @@ Fq_ispower(GEN x, GEN K, GEN T, GEN p)
   pari_sp av = avma;
   long d;
   GEN Q;
-  if (!T) return Fp_ispower(x,K,p);
+  if (equaliu(K,2)) return Fq_issquare(x, T, p);
+  if (!T) return Fp_ispower(x, K, p);
   d = get_FpX_degree(T);
-  if (!umodui(d, K)) return 1;
+  if (typ(x) == t_INT && !umodui(d, K)) return 1;
   Q = subiu(powiu(p,d), 1);
   Q = diviiexact(Q, gcdii(Q, K));
   d = gequal1(Fq_pow(x, Q, T,p));
